--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "ecommerce-portal",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
